--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,16 @@
   --accent-color: #2196f3;
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
+  --primary-color: #ffffff;
+  --secondary-color: #2f303a;
+  --section-btn-color: #f5f4fa;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #e5e5e5;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 
 .list {
@@ -20,7 +25,7 @@ body {
 /* ШАПКА */
 
 .header {
-  background-color: #ffffff;
+  background-color: var(--primary-color);
 }
 
 .logo-link {
@@ -37,7 +42,6 @@ body {
 
 .header-item > .link {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
@@ -56,7 +60,6 @@ body {
 
 .cntc-list-item .link {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
@@ -70,7 +73,7 @@ body {
 /* ШАПКА-ГЕРОЙ */
 
 .hero {
-  background-color: #2f303a;
+  background-color: var(--secondary-color);
 }
 
 .hero-title {
@@ -80,7 +83,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--primary-color);
 }
 
 .order-btn {
@@ -89,7 +92,7 @@ body {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
 
@@ -100,7 +103,6 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
@@ -108,37 +110,33 @@ body {
 
 .specifics-title {
   font-weight: bold;
-  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
 .specifics-text {
-  font-size: 14px;
   line-height: 1.7;
-  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
 /* НАША КОМАНДА */
 
 .team {
-  background-color: #f5f4fa;
+  background-color: var(--section-btn-color);
 }
 
 .team-title {
   font-weight: 500;
   font-size: 16px;
+  text-align: center;
   line-height: 1.2;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
 .team-text {
   font-size: 16px;
   line-height: 1.2;
-  letter-spacing: 0.03em;
+  text-align: center;
   color: var(--secondary-text-color);
 }
 
@@ -155,7 +153,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  background-color: #f5f4fa;
+  background-color: var(--section-btn-color);
 }
 
 .all-btn {
@@ -165,29 +163,30 @@ body {
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
 
 .ws-btn:hover,
 .ws-btn:focus {
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
 
 .app-btn:hover,
 .app-btn:focus {
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
 .design-btn:hover,
 .design-btn:focus {
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
+
 .marketing-btn:hover,
 .marketing-btn:focus {
-  color: #ffffff;
+  color: var(--primary-color);
   background-color: var(--accent-color);
 }
 
@@ -204,14 +203,13 @@ body {
 .service-text {
   font-size: 16px;
   line-height: 1.9;
-  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
 /* ПОДВАЛ */
 
 .footer {
-  background-color: #2f303a;
+  background-color: var(--secondary-color);
 }
 
 .footer-logo-link {
@@ -219,24 +217,16 @@ body {
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
-  color: #ffffff;
+  color: var(--primary-color);
 }
 
-.address-link {
+.address-list-item > .link {
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
   line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-
-.mail-link,
-.tel-link {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.address-list-item > .address-link {
+  color: var(--primary-color);
 }
