--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+  background-color: var(--primary-color);
   color: var(--primary-text-color);
 }
 
